src/snapshots/enderpy__lexer__tests__numeric-hexadecimal-15.snap
---
source: src/lexer.rs
description: "0xf"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xf",
        ),
    },
]
