src/snapshots/enderpy__lexer__tests__numeric-hexadecimal-16.snap
---
source: src/lexer.rs
description: "0xA"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xA",
        ),
    },
]
