src/snapshots/enderpy__lexer__tests__numeric-hexadecimal-17.snap
---
source: src/lexer.rs
description: "0xB"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xB",
        ),
        start: 0,
        end: 3,
    },
]
