src/snapshots/enderpy__lexer__tests__numeric-hexadecimal-18.snap
---
source: src/lexer.rs
description: "0xC"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xC",
        ),
        start: 0,
        end: 3,
    },
]
