src/snapshots/enderpy__lexer__tests__numeric-hexadecimal-2.snap
---
source: src/lexer.rs
description: "0x2"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x2",
        ),
    },
]
