src/snapshots/enderpy__lexer__tests__numeric-hexadecimal-4.snap
---
source: src/lexer.rs
description: "0x4"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x4",
        ),
        start: 0,
        end: 3,
    },
]
