src/snapshots/enderpy__lexer__tests__numeric-hexadecimal-5.snap
---
source: src/lexer.rs
description: "0x5"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x5",
        ),
        start: 0,
        end: 3,
    },
]
